add end point for getting Following/ Followers
